Fix Did you mean alignment

--- a/src/app/auto-correct/auto-correct.component.css
+++ b/src/app/auto-correct/auto-correct.component.css
@@ -11,6 +11,7 @@
   color: #dd4b39;
   font-weight: normal;
   margin-bottom: -2px;
+  padding-left: 2px;
 }
 
 .suggest-auto-correct {
